@@ -1,3 +1,13 @@
+2012-12-16  Simson Garfinkel  <simsong@Mucha.local>
+
+	* src/tcpdemux.h (class tcpdemux): removed write_to_file
+	(class tcpdemux): removed struct packet_info_t
+	* src/tcpdemux.cpp (tcpdemux::post_process_capture_flow): added delete of sbuf
+
+	* src/scan_http.cpp (scan_http_cbo::on_headers_complete): changed O_APPEND to O_TRUNC
+
+	* src/tcpdemux.cpp: removed process_gzip, since it is now done in scan_http
+
 2012-12-07  Simson Garfinkel  <simsong@Mucha.local>
 
 	* src/tcpdemux.h (class flow_addr): fixed operator< type 
